mis a jour montant collecte