@@ -92,7 +92,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.11.0</version><configuration><source>8</source><target>8</target><compilerArgs>--enable-preview</compilerArgs></configuration>
             </plugin>
 
             <plugin>
